# tpipe

./: CMakeLists.txt  Makefile  Readme.md  default.conf  tpipe
include/: AppConfig.hpp  AudioEngine.hpp  Ducker.hpp  LadspaLoader.hpp  VoiceIndoorFilter.hpp
src/: AppConfig.cpp  AudioEngine.cpp  Ducker.cpp  LadspaLoader.cpp  VoiceIndoorFilter.cpp  main.cpp
